# Hotel-Management-System

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
legacy/: LegacyMain.cpp
src/: Main.cpp  Test.cpp
src/data/: bookings.json  catalogue.json  hotels.json  restaurants.json  rooms.json  users.json
src/models/: Booking.h  BookingItem.h  BookingStatus.h  BookingType.h  Guest.h  Hotel.h  MenuItem.h  Restaurant.h  RestaurantCategory.h  RestaurantOrder.h  RestaurantOrderLine.h  Role.h  Room.h  RoomStayItem.h  RoomType.h  User.h
src/security/: Security.cpp  Security.h
src/storage/: BookingRepository.cpp  BookingRepository.h  HotelRepository.cpp  HotelRepository.h  RestaurantRepository.cpp  RestaurantRepository.h  RoomsRepository.cpp  RoomsRepository.h  UserRepository.cpp  UserRepository.h
src/ui/: AppContext.h  Router.cpp  Router.h
src/ui/core/: ConsoleIO.cpp  ConsoleIO.h  Validators.cpp  Validators.h
src/ui/screens/: DashboardAdmin.cpp  DashboardAdmin.h  DashboardGuest.cpp  DashboardGuest.h  DashboardHotelManager.cpp  DashboardHotelManager.h  LoginScreen.cpp  LoginScreen.h  RegisterScreen.cpp  RegisterScreen.h  WelcomeScreen.cpp  WelcomeScreen.h
tests/: CMakeLists.txt  _test_support.h  test_booking_repository.cpp  test_hotel_repository.cpp  test_rooms_repository.cpp  test_sample_data.cpp  test_user_repository.cpp
